contact form z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -726,6 +726,7 @@ section {
 	}
 
 	.contact-form {
+		z-index: 0;
 		padding: 8vw 1rem 1rem 1rem;
 	}
 
